error input message added to calculator form

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="page__not_found__text">
       <p class="first-child">All units be advised… it seems like someone’s been tampering with our network.</p>
       
-      <p>The site will be back once we catch the culprit!</p>
+      <p class="modifier">The site will be back once we catch the culprit!</p>
     </div>  
     <a href="/" class="button modifier">Return to Headquarters</a>
     <img src="/assets/images/error-frame.png" alt="" class="page__not_found__image">
