--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,6 +47,7 @@ import AlpCalculator from "../components/AlpCalculator.astro";
         imgSrc="identifying-folder"
         imgAlt="identifying suspect folder"
         link="#"
+        className="custom-class"
       >
         Get the drop on identifying hypophosphatasia and the tests that can help
         point you in the right direction.
@@ -55,5 +56,4 @@ import AlpCalculator from "../components/AlpCalculator.astro";
 
     <div class="red-string"></div>
   </section>
-<AlpCalculator />
 </Layout>
