--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -21,19 +21,31 @@
         max-width: 15.5rem;
         color: $color-white;
 
+
         @media screen and (min-width:1000px) {
             font-size: 1.125rem;
             line-height: 1.5625rem;
             max-width: 352.154px;
             position: relative;
-            z-index: 2;
-
-            &.modifier {
-                max-width: 19.75rem;
-
-                @media screen and (min-width:768px) {
-                    max-width: 23rem;
-                }
+            z-index: 2;   
+            
+        }
+        &.modifier{
+            max-width: 234px;
+            
+            @media screen and (min-width:1000px) {
+                max-width: 378px;
+            }
+        }
+        &.custom-class{
+            max-width: 317px;
+            @media screen and (min-width:1000px) {
+                font-size: 1.125rem;
+                line-height: 1.5625rem;
+                max-width: 352.154px;
+                position: relative;
+                z-index: 2;   
+                
             }
         }
     }
