--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -502,6 +502,21 @@
             }
         }
 
+        &--underlined {
+
+            li {
+                font-family: "veneer", sans-serif;
+                text-transform: uppercase;
+                font-size: 1.125rem;
+                line-height: 25.2px;
+
+                font-weight: 400;
+
+                &::before {
+                }
+            }
+        }
+
         @media screen and (min-width: 768px) {
             column-gap: 2rem;
             place-content: center;
@@ -516,13 +531,11 @@
                 row-gap: 1rem;
 
                 li {
-                    font-family: "veneer", sans-serif;
                     font-weight: 400;
                     font-size: 1.75rem;
                     line-height: 39.2px;
                     text-align: center;
                     display: block;
-                    text-transform: uppercase;
 
                     line-height: 100%;
 
