Update Footer Copy

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -47,7 +47,7 @@ const currentYear = new Date().getFullYear();
       </p>
       <p>
         &copy; {currentYear}, Alexion Pharmaceuticals, Inc. All rights reserved.
-        US/UNB-H/0470 V2 04/2023 US/UNB-H/0470 V1 03/2023
+        US/UNB-H/0470 V1 05/2023
       </p>
     </div>
   </div>
