--- a/src/components/Navigation/FooterSecondaryNav.astro
+++ b/src/components/Navigation/FooterSecondaryNav.astro
@@ -6,6 +6,13 @@
     <li class="footer__nav_menu_item">
       <a
         class="footer__nav_menu_item_link"
+        href="https://alexion.com/contact-alexion"
+        target="_blank">Contact us</a
+      >
+    </li>
+    <li class="footer__nav_menu_item">
+      <a
+        class="footer__nav_menu_item_link"
         href="https://alexion.com/Legal#privacynotice"
         target="_blank">Privacy Notice</a
       >
