--- a/src/styles/components/_cookie.scss
+++ b/src/styles/components/_cookie.scss
@@ -32,11 +32,11 @@
     font-weight: 400;
     font-size: 1.0625rem;
     line-height: 1.625rem;
-    padding-top: 0.25rem;
+    // padding-top: 0.25rem;
 
     @media screen and (min-width: 1200px) {
-      font-size: 1.125rem;
-      line-height: 1.6875rem;
+      font-size: 1.0625rem;
+      line-height: 1.5938rem;
     }
 
     a {
@@ -49,7 +49,7 @@
 
   &__button {
     position: relative;
-    top: -0.5rem;
+    top: 0;
     right: -0.5rem;
     color: $color-white;
     cursor: pointer;
@@ -58,7 +58,7 @@
     padding-left: 5px;
 
     @media screen and (min-width: 1024px) {
-      top: 0;
+      top: .125rem;
       right: 0;
     }
 
