--- a/src/components/CookieBanner.astro
+++ b/src/components/CookieBanner.astro
@@ -3,7 +3,8 @@
     <p class="cookie__text">
       We use cookies to give you the best online experience. By using our
       website, you agree to our use of cookies in accordance with our <a
-        href="#">cookie policy</a
+        target="_blank"
+        href="https://alexion.com/Legal#cookie-policy">cookie policy</a
       >.
     </p>
     <button class="cookie__button">
