🚑 Fix lastest comments

--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -491,7 +491,8 @@ const internalNavLinks = [
       <div class="kpi">
         <div class="kpi__number">
           <picture>
-            <img src="/assets/images/identifying-hpp/fingerprint.png" alt="" />
+            <source srcset="/assets/images/identifying-hpp/fingerprint-desktop.png" media="(min-width: 768px)">
+            <img src="/assets/images/identifying-hpp/fingerprint-mobile.png" alt="" />
           </picture>
           <p class="color--red font--veneer">400+</p>
         </div>
