--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1111,18 +1111,14 @@
 
             @media screen and (min-width: 768px) {
                 right: auto;
-                left: 3rem;
+                left: calc(var(--wrapper-margin) / 2);
 
                 top: 50%;
                 transform: translateY(-50%) rotate(7deg);
             }
 
-            @media screen and (min-width: 1024px) {
-                left: 4rem;
-            }
-
-            @media screen and (min-width: 1366px) {
-                left: 7rem;
+            @media screen and (min-width: 1600px) {
+                left: calc((100vw - 90rem) / 2);
             }
         }
 
@@ -1533,7 +1529,7 @@
                     position: absolute;
                     top: auto;
 
-                    bottom: -15.8125rem;
+                    bottom: -5.8125rem;
 
                     img {
                         max-height: 89.3125rem;
@@ -1545,6 +1541,14 @@
 
             @media screen and (min-width: 1366px) {
                 margin-bottom: 19rem;
+            }
+
+            @media screen and (min-width: 2353px) {
+                position: relative;
+
+                .asset__manilla {
+                    bottom: -8.8125rem;
+                }
             }
         }
 
@@ -1560,12 +1564,16 @@
                 width: 100%;
                 max-width: 23.4375rem;
 
-                background-image: url("/assets/images/identifying-hpp/papers.png");
+                background-image: url("/assets/images/identifying-hpp/papers-mobile.png");
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
 
                 right: 0;
                 bottom: -29.5rem;
+
+                @media screen and (min-width: 768px) {
+                    background-image: url("/assets/images/identifying-hpp/papers-desktop.png");
+                }
 
                 @media screen and (min-width: 1024px) {
                     bottom: -24rem;
@@ -1589,6 +1597,13 @@
                     left: 50%;
 
                     transform: translateX(-50%);
+
+                    @media screen and (min-width: 768px) {
+                        width: 16.125rem;
+                        height: 5.75rem;
+                        top: -15px;
+                        left: 43%;
+                    }
                 }
 
                 .test__limitations-content {
@@ -1597,6 +1612,11 @@
                     margin-right: auto;
 
                     padding: 6rem 0;
+
+                    @media screen and (min-width: 768px) {
+                        max-width: 15rem;
+                        margin: 0 45px 0px 40px;
+                    }
 
                     @media screen and (min-width: 1024px) {
                         max-width: 16rem;
@@ -1922,6 +1942,10 @@
                 &.second {
                     height: 4rem;
 
+                    @media screen and (min-width: 768px) {
+                        height: 8rem;
+                    }
+
                     @media screen and (min-width: 1024px) {
                         height: 12rem;
                     }
@@ -1976,6 +2000,7 @@
 
                     @media screen and (min-width: 768px) {
                         transform: translateX(20%);
+                        width: 8.3881rem;
                     }
 
                     p {
@@ -2000,11 +2025,10 @@
                         }
 
                         @media screen and (min-width: 768px) {
-                            transform: translateX(-70%);
-                        }
-
-                        @media screen and (min-width: 768px) {
                             font-size: 5.125rem;
+                            bottom: auto;
+                            top: 50%;
+                            transform: translate(-70%, -63%);
                         }
                     }
                 }
@@ -2028,11 +2052,11 @@
                     }
 
                     @media screen and (min-width: 768px) {
-                        max-width: 32.5rem;
+                        max-width: 28.5rem;
                     }
 
                     @media screen and (min-width: 1024px) {
-                        max-width: 35.5rem;
+                        max-width: 30.5rem;
                     }
                 }
             }
