--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1758,7 +1758,10 @@
                 }
 
                 th {
-                    padding: .25rem 1rem;
+                    padding-top: 0.45rem;
+                    padding-right: 1rem;
+                    padding-bottom: 0.75rem;
+                    padding-left: 1rem;
                     text-align: left;
                     font-weight: 600;
                     font-size: 1.3125rem;
