--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -374,7 +374,9 @@ const internalNavLinks = [
                             deficient GABA activity.<sup>1</sup>
                         </p>
                         <p class="alpd-academy__deficient-paragraph">
-                            Though the direct cause is unknown, hypophosphatasia is also associated with other neurologic symptoms in pediatrics and adults, like<sup>8,14</sup>:
+                            Though the direct cause is unknown, hypophosphatasia
+                            is also associated with other neurologic symptoms in
+                            pediatrics and adults, like<sup>8,14</sup>:
                         </p>
                         <ul
                             class="alpd-academy__symptoms-list grid-rows-3 alpd-academy__symptoms-list--underlined"
@@ -384,8 +386,10 @@ const internalNavLinks = [
                             <li>headaches</li>
                             <li class="row-span-2">
                                 <p class="font--inherit">
-                                    mood<br>
-                                    <span class="font-size--14px md:font-size--18px">
+                                    mood<br />
+                                    <span
+                                        class="font-size--14px md:font-size--18px"
+                                    >
                                         (depression, anxiety)
                                     </span>
                                 </p>
@@ -400,13 +404,13 @@ const internalNavLinks = [
             <div class="wrapper">
                 <p class="alpd-academy__call-out-text">
                     The third substrate impacted by low levels of alkaline
-                    phosphatase is <span class="text--700"
-                        >phosphoethanolamine (PEA)</span
-                    >. While the impact on the body is not fully understood, it
-                    is important to recognize this third substrate as it can be
-                    used as a <span class="text--700"
-                        >testing method to confirm a hypophosphatasia</span
-                    > diagnosis.<sup>5,13,14</sup>
+                    phosphatase is <strong>phosphoethanolamine (PEA)</strong>.
+                    While the impact on the body is not fully understood, it is
+                    important to recognize this third substrate as it can be
+                    used as a
+                    <strong>testing method to confirm a hypophosphatasia</strong
+                    >
+                    diagnosis.<sup>5,15,16</sup>
                 </p>
             </div>
         </div>
@@ -423,13 +427,13 @@ const internalNavLinks = [
                     <p class="font--special-elite">
                         Patients with persistently low alkaline phosphatase
                         (ALP) can experience debilitating hypophosphatasia
-                        symptoms that may progress, and wide-ranging systemic
-                        complications.<sup>1-4, 15</sup>
+                        symptoms that may progress and wide-ranging systemic
+                        complications.<sup>1-4,17</sup>
                     </p>
                     <p class="font--special-elite color--red">
                         Persistently low ALP can be defined as 2 or more age-
                         and sex-adjusted ALP levels below normal range in
-                        intervals of more than 30 days.<sup>5,16,17</sup>
+                        intervals of more than 30 days.<sup>5,9,18</sup>
                     </p>
                 </div>
             </div>
@@ -437,7 +441,9 @@ const internalNavLinks = [
     </section>
     <section class="section alpd-academy__know-the-numbers" id="low-alp">
         <div class="wrapper">
-            <h1 class="know-the-numbers__title">know the numbers</h1>
+            <h1 class="know-the-numbers__title text--center">
+                know the numbers
+            </h1>
         </div>
 
         <div class="numbers__info">
@@ -468,7 +474,7 @@ const internalNavLinks = [
                         symptoms of hypophosphatasia and differential diagnoses
                         should be ruled out. Check with your lab for their
                         appropriate age- and sex-adjusted reference ranges.<sup
-                            >18-22</sup
+                            >20-24</sup
                         >
                     </p>
                 </div>
@@ -490,7 +496,7 @@ const internalNavLinks = [
                         > because alkaline phosphatase reference values are highly
                         dependent on age and sex. Ensure that lab results for alkaline
                         phosphatase levels reflect age- and sex-adjusted reference
-                        ranges for the specific patient.<sup>1,23,24</sup>
+                        ranges for the specific patient.<sup>1,25,26</sup>
                     </p>
                 </div>
             </div>
@@ -501,7 +507,7 @@ const internalNavLinks = [
                 <div class="wrapper">
                     <p class="chart__title">
                         Age- and sex-adjusted alkaline phosphatase reference
-                        ranges (U/L)<sup>18-23</sup>
+                        ranges (U/L)<sup>20-25</sup>
                     </p>
                     <picture class="chart">
                         <source
@@ -520,7 +526,7 @@ const internalNavLinks = [
                     <p class="chart__paragraph">
                         <sup class="symbol-sup">*</sup>Check with your lab for
                         their appropriate age- and sex-adjusted reference range.<sup
-                            >1,24</sup
+                            >1,26</sup
                         >
                     </p>
                     <p class="chart__paragraph">
@@ -529,7 +535,7 @@ const internalNavLinks = [
                         samples from 1072 male and 1116 female participants
                         (newborn to 18 years) were used to calculate age- and
                         sex-specific reference intervals. No variation in ALP
-                        based on ethnic differences was observed.<sup>23</sup>
+                        based on ethnic differences was observed.<sup>25</sup>
                     </p>
                 </div>
             </div>
@@ -555,36 +561,111 @@ const internalNavLinks = [
                     <p>
                         Though the dangers of high alkaline phosphatase levels
                         may be commonly recognized, persistently low alkaline
-                        phosphatase, defined as having <span
-                            class="color--red sz-500:color--saffron-mango"
+                        phosphatase, defined as having <span class="color--red"
                             >2 values below normal in intervals of more than 30
-                            days,<sup class="symbol-sup">*</sup></span
-                        > a key piece of evidence of a hypophosphatasia diagnosis.<sup
-                            >1,5,16,17,24,25</sup
+                            days,*</span
+                        > is a key piece of evidence of a hypophosphatasia diagnosis.<sup
+                            >1,5,9,18,26,27</sup
                         >
                     </p>
                     <p class="text--14px text--400">
                         <sup class="symbol-sup">*</sup>Alkaline phosphatase
-                        ranges must be age- and sex-adjusted.
+                        ranges must be age- and sex-adjusted.<sup>1,26</sup>
                     </p>
                 </div>
             </div>
         </div>
-
-        <!-- <div class="hpp-profile__call-out">
-      <p class="hpp-profile-text">Read the full file on hypophosphatasia</p>
-      <a href="#" class="button">HPP Profile</a>
-
-      <div class="red-string first"></div>
-      <div class="red-string second"></div>
-      <div class="red-string third"></div>
-    </div> -->
 
         <CTA
             buttonLabel="HPP Profile"
             linkURL="#"
             content="Read the full file on hypophosphatasia"
         />
-        <References />
+        <References>
+            <p>
+                <strong>References: 1.</strong> Rockman-Greenberg C. Hypophosphatasia. Pediatr
+                Endocrinol Rev. 2013;10(suppl 2):380-388. <strong>2.</strong> Medline Plus. ALPL
+                gene. National Library of Medicine. 2018. Accessed March 30,
+                2023. <a href="https://medlineplus.gov/genetics/gene/alpl/" target="_blank">https://medlineplus.gov/genetics/gene/alpl/</a> <strong>3.</strong> Weber TJ,
+                Sawyer EK, Moseley S, et al. Burden of disease in adult patients
+                with hypophosphatasia: results from two patient-reported
+                surveys. Metabolism. 2016;65(10):1522-1530. <strong>4.</strong> Hӧgler W, Langman
+                C, Gomes da Silva H, et al. Diagnostic delay is common among
+                patients with hypophosphatasia: initial findings from a
+                longitudinal, prospective, global registry. BMC Musculoskelet
+                Disord. 2019;20(1):80. <strong>5.</strong> Bianchi ML, Bishop NJ, Guañabens N, et
+                al; Rare Bone Disease Action Group of the European Calcified
+                Tissue Society. Hypophosphatasia in adolescents and adults:
+                overview of diagnosis and treatment. Osteoporos Int.
+                2020;31(8):1445-1460. <strong>6.</strong> Mercimek-Mahmutoglu S, Sidky S, Hyland
+                K, et al. Prevalence of inherited neurotransmitter disorders in
+                patients with movement disorders and epilepsy: a retrospective
+                cohort study. Orphanet J Rare Dis. 2015;10:12. <strong>7.</strong> Cellini B,
+                Montioli R, Oppici E, Astegno A, Borri Voltattorni C. The
+                chaperone role of the pyridoxal 5’-phosphate and its
+                implications for rare diseases involving B6-dependent enzymes.
+                Clin Biochem. 2014;47(3):158-165. <strong>8.</strong> Pierpont EI, Simmons JH,
+                Spurlock KJ, Shanley R, Sarafoglou KM. Impact of pediatric
+                hypophosphatasia on behavioral health and quality of life.
+                Orphanet J Rare Dis. 2021;16(1):80. <strong>9.</strong> McKiernan FE, Dong J,
+                Berg RL, et al. Mutational and biochemical findings in adults
+                with persistent hypophosphatasemia. Osteoporos Int.
+                2017;28:2343-2348. <strong>10.</strong> Shajani-Yi Z, Ayala-Lopez N, Black M,
+                Dahir KM. Urine phosphoethanolamine is a specific biomarker for
+                hypophosphatasia in adults. Bone. 2022;163:116504. <strong>11.</strong> Nunes ME.
+                Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA, et al,
+                eds. GeneReviews®. University of Washington; 2007. Accessed
+                March 30, 2023. <a href="https://www.ncbi.nlm.nih.gov/books/NBK1150/" target="_blank">https://www.ncbi.nlm.nih.gov/books/NBK1150/</a> <strong>12.</strong>
+                Conti F, Ciullini L, Pugliese G. Hypophosphatasia: clinical
+                manifestation and burden of disease in adult patients. Clin
+                Cases Miner Bone Metab. 2017;14(2):230-234. <strong>13.</strong> Salles JP.
+                Hypophosphatasia: biological and clinical aspects, avenues for
+                therapy. Clin Biochem Rev. 2020;41(1):13-27. <strong>14.</strong> Colazo JM, Hu
+                JR, Dahir KM, Simmons JH. Neurological symptoms in
+                hypophosphatasia. Osteoporos Int. 2019;30(2):469-480. <strong>15.</strong> Mornet
+                E. Molecular genetics of hypophosphatasia and phenotype-genotype
+                correlations. Subcell Biochem. 2015;76:25-43. <strong>16.</strong> NORD.
+                Hypophosphatasia. 2022. Accessed March 30, 2023.
+                <a href="https://rarediseases.org/rare-diseases/hypophosphatasia/" target="_blank">https://rarediseases.org/rare-diseases/hypophosphatasia/</a> <strong>17.</strong>
+                Rush ET, Moseley S, Petryk A. Burden of disease in pediatric
+                patients with hypophosphatasia: results from the HPP Impact
+                Patient Survey and the HPP Outcomes Study Telephone interview.
+                Orphanet J Rare Dis. 2019;14(1):201. <strong>18.</strong> Vieira LHR, Peixoto KC,
+                Flósi CL, Fleiuss de Farias ML, Madeira M. Active search of
+                adult patients with persistently low serum alkaline phosphatase
+                levels for diagnosis of hypophosphatasia. Arch Endocrinol Metab.
+                2021;65(3):289-294. <strong>19.</strong> McKiernan FE, Berg RL, Fuehrer J.
+                Clinical and radiographic findings in adults with persistent
+                hypophosphatasemia. J Bone Miner Res. 2014;29(7):1651-1660. <strong>20.</strong>
+                Adeli K, Higgins V, Nieuwesteeg M, et al. Biochemical marker
+                reference values across pediatric, adult, and geriatric ages:
+                establishment of robust pediatric and adult reference intervals
+                on the basis of the Canadian Health Measures Survey. Clin Chem.
+                2015;61(8):1049-1062. <strong>21.</strong> Schumann G, Klauke R, Canalias F, et
+                al. IFCC primary reference procedures for the measurement of
+                catalytic activity concentrations of enzymes at 37 °C. Part 9:
+                reference procedure for the measurement of catalytic
+                concentration of alkaline phosphatase International Federation
+                of Clinical Chemistry and Laboratory Medicine (IFCC) Scientific
+                Division, Committee on Reference Systems of Enzymes (C-RSE)
+                (1)). Clin Chem Lab Med. 2011;49(9):1439-1446. <strong>22.</strong> Quest
+                Diagnostics. Alkaline phosphatase. Accessed March 30, 2023.
+                https:/testdirectory.questdiagnostics.com/test/test-detail/234/alkaline-phosphatase?
+                cc=MASTER <strong>23.</strong> Labcorp. Alkaline phosphatase. Accessed March 20,
+                2023. <a href="https://www.labcorp.com/tests/" target="_blank">https://www.labcorp.com/tests/</a>
+                001107/alkaline-phosphatase# <strong>24.</strong> ARUP Laboratories. Alkaline
+                phosphatase isoenzymes, serum or plasma. Accessed March 30,
+                2023. <a href="https://ltd.aruplab.com/Tests/Pub/0021020" target="_blank">https://ltd.aruplab.com/Tests/Pub/0021020</a> <strong>25.</strong> Colantonio
+                DA, Kyriakopoulou L, Chan MK, et al. Closing the gaps in
+                pediatric laboratory reference intervals: a CALIPER database of
+                40 biochemical markers in a healthy and multiethnic population
+                of children. Clin Chem. 2012;58(5):854-868. <strong>26.</strong> Bishop N, Munns
+                CF, Ozono K. Transformative therapy in hypophosphatasia. Arch
+                Dis Child. 2016;101(6):514-515. <strong>27.</strong> Whyte MP. Hypophosphatasia:
+                nature's window on alkaline phosphatase function in humans. In:
+                Bilezikian JP, Raisz LG, Martin TJ, eds. Principles of Bone
+                Biology. 3rd ed. Academic Press; 2008:1573-1598.
+            </p>
+        </References>
     </section>
 </Layout>
