Update Hero Button Link

--- a/src/components/MainHero.astro
+++ b/src/components/MainHero.astro
@@ -39,7 +39,7 @@ const { classes = "", id } = Astro.props;
               Be on the lookout for low alkaline phosphatase (ALP).
             </p>
             <div class="main-hero__button-wrapper">
-              <button class="button"> Why Low ALP Matters</button>
+              <a href="/alpd-academy/" class="button"> Why Low ALP Matters</a>
             </div>
           </div>
         </div>
