--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -3,6 +3,7 @@ import CTA from "../components/CTA.astro";
 import References from "../components/References.astro";
 import InternalNavigation from "../components/InternalNavigation.astro";
 import Layout from "../layouts/Layout.astro";
+import CommonHeroPage from "../components/CommonHeroPage.astro";
 const internalNavLinks = [
     { href: "role-of-alp", label: "Role of ALP", active: true },
     { href: "low-alp", label: "Low ALP" },
@@ -10,8 +11,8 @@ const internalNavLinks = [
 ---
 
 <Layout title="ALPD Academy" pageClass="alpd__academy" showISI={false}>
-    <section class="page-hero">
-        <picture class="page-hero__image">
+    <CommonHeroPage title="alpd academy" classes="alpd-academy-page__hero">
+        <picture slot="image-hero" data-image-hero>
             <source
                 srcset="/assets/images/alpd-academy/alpd-academy-hero-desktop.png"
                 media="(min-width: 1024px)"
@@ -25,18 +26,7 @@ const internalNavLinks = [
                 alt=""
             />
         </picture>
-        <picture class="page-hero__stamp">
-            <source
-                srcset="/assets/images/alpd-academy/alpd-academy-stamp-desktop.png"
-                media="(min-width: 768px)"
-            />
-            <img
-                src="/assets/images/alpd-academy/alpd-academy-stamp-mobile.png"
-                alt=""
-            />
-        </picture>
-        <div class="red-string page-hero-red-string"></div>
-    </section>
+    </CommonHeroPage>
     {internalNavLinks && <InternalNavigation items={internalNavLinks} />}
     <section class="section alpd-academy__role" id="role-of-alp">
         <div class="wrapper alpd-academy__role-header">
@@ -561,7 +551,7 @@ const internalNavLinks = [
                     <p>
                         Though the dangers of high alkaline phosphatase levels
                         may be commonly recognized, persistently low alkaline
-                        phosphatase, defined as having <span class="color--red"
+                        phosphatase, defined as having <span class="color--red sz-500:color--saffron-mango"
                             >2 values below normal in intervals of more than 30
                             days,*</span
                         > is a key piece of evidence of a hypophosphatasia diagnosis.<sup
@@ -583,88 +573,113 @@ const internalNavLinks = [
         />
         <References>
             <p>
-                <strong>References: 1.</strong> Rockman-Greenberg C. Hypophosphatasia. Pediatr
-                Endocrinol Rev. 2013;10(suppl 2):380-388. <strong>2.</strong> Medline Plus. ALPL
-                gene. National Library of Medicine. 2018. Accessed March 30,
-                2023. <a href="https://medlineplus.gov/genetics/gene/alpl/" target="_blank">https://medlineplus.gov/genetics/gene/alpl/</a> <strong>3.</strong> Weber TJ,
-                Sawyer EK, Moseley S, et al. Burden of disease in adult patients
-                with hypophosphatasia: results from two patient-reported
-                surveys. Metabolism. 2016;65(10):1522-1530. <strong>4.</strong> Hӧgler W, Langman
-                C, Gomes da Silva H, et al. Diagnostic delay is common among
-                patients with hypophosphatasia: initial findings from a
-                longitudinal, prospective, global registry. BMC Musculoskelet
-                Disord. 2019;20(1):80. <strong>5.</strong> Bianchi ML, Bishop NJ, Guañabens N, et
-                al; Rare Bone Disease Action Group of the European Calcified
-                Tissue Society. Hypophosphatasia in adolescents and adults:
-                overview of diagnosis and treatment. Osteoporos Int.
-                2020;31(8):1445-1460. <strong>6.</strong> Mercimek-Mahmutoglu S, Sidky S, Hyland
-                K, et al. Prevalence of inherited neurotransmitter disorders in
-                patients with movement disorders and epilepsy: a retrospective
-                cohort study. Orphanet J Rare Dis. 2015;10:12. <strong>7.</strong> Cellini B,
-                Montioli R, Oppici E, Astegno A, Borri Voltattorni C. The
-                chaperone role of the pyridoxal 5’-phosphate and its
-                implications for rare diseases involving B6-dependent enzymes.
-                Clin Biochem. 2014;47(3):158-165. <strong>8.</strong> Pierpont EI, Simmons JH,
-                Spurlock KJ, Shanley R, Sarafoglou KM. Impact of pediatric
-                hypophosphatasia on behavioral health and quality of life.
-                Orphanet J Rare Dis. 2021;16(1):80. <strong>9.</strong> McKiernan FE, Dong J,
-                Berg RL, et al. Mutational and biochemical findings in adults
-                with persistent hypophosphatasemia. Osteoporos Int.
-                2017;28:2343-2348. <strong>10.</strong> Shajani-Yi Z, Ayala-Lopez N, Black M,
-                Dahir KM. Urine phosphoethanolamine is a specific biomarker for
-                hypophosphatasia in adults. Bone. 2022;163:116504. <strong>11.</strong> Nunes ME.
-                Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA, et al,
-                eds. GeneReviews®. University of Washington; 2007. Accessed
-                March 30, 2023. <a href="https://www.ncbi.nlm.nih.gov/books/NBK1150/" target="_blank">https://www.ncbi.nlm.nih.gov/books/NBK1150/</a> <strong>12.</strong>
-                Conti F, Ciullini L, Pugliese G. Hypophosphatasia: clinical
-                manifestation and burden of disease in adult patients. Clin
-                Cases Miner Bone Metab. 2017;14(2):230-234. <strong>13.</strong> Salles JP.
-                Hypophosphatasia: biological and clinical aspects, avenues for
-                therapy. Clin Biochem Rev. 2020;41(1):13-27. <strong>14.</strong> Colazo JM, Hu
-                JR, Dahir KM, Simmons JH. Neurological symptoms in
-                hypophosphatasia. Osteoporos Int. 2019;30(2):469-480. <strong>15.</strong> Mornet
-                E. Molecular genetics of hypophosphatasia and phenotype-genotype
-                correlations. Subcell Biochem. 2015;76:25-43. <strong>16.</strong> NORD.
-                Hypophosphatasia. 2022. Accessed March 30, 2023.
-                <a href="https://rarediseases.org/rare-diseases/hypophosphatasia/" target="_blank">https://rarediseases.org/rare-diseases/hypophosphatasia/</a> <strong>17.</strong>
-                Rush ET, Moseley S, Petryk A. Burden of disease in pediatric
-                patients with hypophosphatasia: results from the HPP Impact
-                Patient Survey and the HPP Outcomes Study Telephone interview.
-                Orphanet J Rare Dis. 2019;14(1):201. <strong>18.</strong> Vieira LHR, Peixoto KC,
-                Flósi CL, Fleiuss de Farias ML, Madeira M. Active search of
-                adult patients with persistently low serum alkaline phosphatase
-                levels for diagnosis of hypophosphatasia. Arch Endocrinol Metab.
-                2021;65(3):289-294. <strong>19.</strong> McKiernan FE, Berg RL, Fuehrer J.
-                Clinical and radiographic findings in adults with persistent
-                hypophosphatasemia. J Bone Miner Res. 2014;29(7):1651-1660. <strong>20.</strong>
-                Adeli K, Higgins V, Nieuwesteeg M, et al. Biochemical marker
-                reference values across pediatric, adult, and geriatric ages:
-                establishment of robust pediatric and adult reference intervals
-                on the basis of the Canadian Health Measures Survey. Clin Chem.
-                2015;61(8):1049-1062. <strong>21.</strong> Schumann G, Klauke R, Canalias F, et
-                al. IFCC primary reference procedures for the measurement of
-                catalytic activity concentrations of enzymes at 37 °C. Part 9:
-                reference procedure for the measurement of catalytic
-                concentration of alkaline phosphatase International Federation
-                of Clinical Chemistry and Laboratory Medicine (IFCC) Scientific
-                Division, Committee on Reference Systems of Enzymes (C-RSE)
-                (1)). Clin Chem Lab Med. 2011;49(9):1439-1446. <strong>22.</strong> Quest
-                Diagnostics. Alkaline phosphatase. Accessed March 30, 2023.
+                <strong>References: 1.</strong> Rockman-Greenberg C. Hypophosphatasia.
+                Pediatr Endocrinol Rev. 2013;10(suppl 2):380-388. <strong
+                    >2.</strong
+                > Medline Plus. ALPL gene. National Library of Medicine. 2018. Accessed
+                March 30, 2023. <a
+                    href="https://medlineplus.gov/genetics/gene/alpl/"
+                    target="_blank"
+                    >https://medlineplus.gov/genetics/gene/alpl/</a
+                >
+                <strong>3.</strong> Weber TJ, Sawyer EK, Moseley S, et al. Burden
+                of disease in adult patients with hypophosphatasia: results from
+                two patient-reported surveys. Metabolism. 2016;65(10):1522-1530.
+                <strong>4.</strong> Hӧgler W, Langman C, Gomes da Silva H, et al.
+                Diagnostic delay is common among patients with hypophosphatasia:
+                initial findings from a longitudinal, prospective, global registry.
+                BMC Musculoskelet Disord. 2019;20(1):80. <strong>5.</strong> Bianchi
+                ML, Bishop NJ, Guañabens N, et al; Rare Bone Disease Action Group
+                of the European Calcified Tissue Society. Hypophosphatasia in adolescents
+                and adults: overview of diagnosis and treatment. Osteoporos Int.
+                2020;31(8):1445-1460. <strong>6.</strong> Mercimek-Mahmutoglu S,
+                Sidky S, Hyland K, et al. Prevalence of inherited neurotransmitter
+                disorders in patients with movement disorders and epilepsy: a retrospective
+                cohort study. Orphanet J Rare Dis. 2015;10:12. <strong
+                    >7.</strong
+                > Cellini B, Montioli R, Oppici E, Astegno A, Borri Voltattorni C.
+                The chaperone role of the pyridoxal 5’-phosphate and its implications
+                for rare diseases involving B6-dependent enzymes. Clin Biochem. 2014;47(3):158-165.
+                <strong>8.</strong> Pierpont EI, Simmons JH, Spurlock KJ, Shanley
+                R, Sarafoglou KM. Impact of pediatric hypophosphatasia on behavioral
+                health and quality of life. Orphanet J Rare Dis. 2021;16(1):80. <strong
+                    >9.</strong
+                > McKiernan FE, Dong J, Berg RL, et al. Mutational and biochemical
+                findings in adults with persistent hypophosphatasemia. Osteoporos
+                Int. 2017;28:2343-2348. <strong>10.</strong> Shajani-Yi Z, Ayala-Lopez
+                N, Black M, Dahir KM. Urine phosphoethanolamine is a specific biomarker
+                for hypophosphatasia in adults. Bone. 2022;163:116504. <strong
+                    >11.</strong
+                > Nunes ME. Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA,
+                et al, eds. GeneReviews®. University of Washington; 2007. Accessed
+                March 30, 2023. <a
+                    href="https://www.ncbi.nlm.nih.gov/books/NBK1150/"
+                    target="_blank"
+                    >https://www.ncbi.nlm.nih.gov/books/NBK1150/</a
+                >
+                <strong>12.</strong>
+                Conti F, Ciullini L, Pugliese G. Hypophosphatasia: clinical manifestation
+                and burden of disease in adult patients. Clin Cases Miner Bone Metab.
+                2017;14(2):230-234. <strong>13.</strong> Salles JP. Hypophosphatasia:
+                biological and clinical aspects, avenues for therapy. Clin Biochem
+                Rev. 2020;41(1):13-27. <strong>14.</strong> Colazo JM, Hu JR, Dahir
+                KM, Simmons JH. Neurological symptoms in hypophosphatasia. Osteoporos
+                Int. 2019;30(2):469-480. <strong>15.</strong> Mornet E. Molecular
+                genetics of hypophosphatasia and phenotype-genotype correlations.
+                Subcell Biochem. 2015;76:25-43. <strong>16.</strong> NORD. Hypophosphatasia.
+                2022. Accessed March 30, 2023.
+                <a
+                    href="https://rarediseases.org/rare-diseases/hypophosphatasia/"
+                    target="_blank"
+                    >https://rarediseases.org/rare-diseases/hypophosphatasia/</a
+                >
+                <strong>17.</strong>
+                Rush ET, Moseley S, Petryk A. Burden of disease in pediatric patients
+                with hypophosphatasia: results from the HPP Impact Patient Survey
+                and the HPP Outcomes Study Telephone interview. Orphanet J Rare Dis.
+                2019;14(1):201. <strong>18.</strong> Vieira LHR, Peixoto KC, Flósi
+                CL, Fleiuss de Farias ML, Madeira M. Active search of adult patients
+                with persistently low serum alkaline phosphatase levels for diagnosis
+                of hypophosphatasia. Arch Endocrinol Metab. 2021;65(3):289-294. <strong
+                    >19.</strong
+                > McKiernan FE, Berg RL, Fuehrer J. Clinical and radiographic findings
+                in adults with persistent hypophosphatasemia. J Bone Miner Res. 2014;29(7):1651-1660.
+                <strong>20.</strong>
+                Adeli K, Higgins V, Nieuwesteeg M, et al. Biochemical marker reference
+                values across pediatric, adult, and geriatric ages: establishment
+                of robust pediatric and adult reference intervals on the basis of
+                the Canadian Health Measures Survey. Clin Chem. 2015;61(8):1049-1062.
+                <strong>21.</strong> Schumann G, Klauke R, Canalias F, et al. IFCC
+                primary reference procedures for the measurement of catalytic activity
+                concentrations of enzymes at 37 °C. Part 9: reference procedure for
+                the measurement of catalytic concentration of alkaline phosphatase
+                International Federation of Clinical Chemistry and Laboratory Medicine
+                (IFCC) Scientific Division, Committee on Reference Systems of Enzymes
+                (C-RSE) (1)). Clin Chem Lab Med. 2011;49(9):1439-1446. <strong
+                    >22.</strong
+                > Quest Diagnostics. Alkaline phosphatase. Accessed March 30, 2023.
                 https:/testdirectory.questdiagnostics.com/test/test-detail/234/alkaline-phosphatase?
-                cc=MASTER <strong>23.</strong> Labcorp. Alkaline phosphatase. Accessed March 20,
-                2023. <a href="https://www.labcorp.com/tests/" target="_blank">https://www.labcorp.com/tests/</a>
-                001107/alkaline-phosphatase# <strong>24.</strong> ARUP Laboratories. Alkaline
-                phosphatase isoenzymes, serum or plasma. Accessed March 30,
-                2023. <a href="https://ltd.aruplab.com/Tests/Pub/0021020" target="_blank">https://ltd.aruplab.com/Tests/Pub/0021020</a> <strong>25.</strong> Colantonio
-                DA, Kyriakopoulou L, Chan MK, et al. Closing the gaps in
-                pediatric laboratory reference intervals: a CALIPER database of
-                40 biochemical markers in a healthy and multiethnic population
-                of children. Clin Chem. 2012;58(5):854-868. <strong>26.</strong> Bishop N, Munns
-                CF, Ozono K. Transformative therapy in hypophosphatasia. Arch
-                Dis Child. 2016;101(6):514-515. <strong>27.</strong> Whyte MP. Hypophosphatasia:
-                nature's window on alkaline phosphatase function in humans. In:
-                Bilezikian JP, Raisz LG, Martin TJ, eds. Principles of Bone
-                Biology. 3rd ed. Academic Press; 2008:1573-1598.
+                cc=MASTER <strong>23.</strong> Labcorp. Alkaline phosphatase. Accessed
+                March 20, 2023. <a
+                    href="https://www.labcorp.com/tests/"
+                    target="_blank">https://www.labcorp.com/tests/</a
+                >
+                001107/alkaline-phosphatase# <strong>24.</strong> ARUP Laboratories.
+                Alkaline phosphatase isoenzymes, serum or plasma. Accessed March
+                30, 2023. <a
+                    href="https://ltd.aruplab.com/Tests/Pub/0021020"
+                    target="_blank">https://ltd.aruplab.com/Tests/Pub/0021020</a
+                >
+                <strong>25.</strong> Colantonio DA, Kyriakopoulou L, Chan MK, et
+                al. Closing the gaps in pediatric laboratory reference intervals:
+                a CALIPER database of 40 biochemical markers in a healthy and multiethnic
+                population of children. Clin Chem. 2012;58(5):854-868. <strong
+                    >26.</strong
+                > Bishop N, Munns CF, Ozono K. Transformative therapy in hypophosphatasia.
+                Arch Dis Child. 2016;101(6):514-515. <strong>27.</strong> Whyte MP.
+                Hypophosphatasia: nature's window on alkaline phosphatase function
+                in humans. In: Bilezikian JP, Raisz LG, Martin TJ, eds. Principles
+                of Bone Biology. 3rd ed. Academic Press; 2008:1573-1598.
             </p>
         </References>
     </section>
