--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,9 +47,51 @@
 
 // -------------------------- ALPD Academy page ---------------------------------------------------
 .alpd__academy {
-    // width: 100%;
-    // max-width: 90rem;
-    // margin: auto;
+    .internal__nav_list {
+        justify-content: center;
+    }
+
+    .alpd-academy-page__hero {
+
+        [data-image-hero] img {
+            object-position: top;
+        }
+
+        .common-page-hero__title {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-68%) rotate(-26deg);
+            left: -23px;
+
+            @media screen and (min-width: 768px) {
+                left: calc(var(--wrapper-margin) / 2);
+                transform: translateY(-68%) rotate(-5deg);
+            }
+
+            @media screen and (min-width: 1366px) {
+                left: calc((var(--wrapper-margin) / 2) + 4rem);
+            }
+
+            @media screen and (min-width: 1600px) {
+                left: calc(((100vw - 90rem) / 2) + 4rem);
+            }
+        }
+
+        .red-string {
+            width: calc(100vw + 20rem);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            z-index: 2;
+
+            transform: translate(-50%, -50%) rotate(34deg);
+
+            @media screen and (min-width: 768px) {
+                top: 93%;
+                transform: translate(-50%, -50%) rotate(7deg);
+            }
+        }
+    }
 }
 
 .alpd-academy__role {
@@ -115,8 +157,8 @@
 
     .alpd-academy__role-alkaline {
         position: relative;
-        padding-top: 4rem;
-        padding-bottom: 4rem;
+        padding-top: 1rem;
+        padding-bottom: 3rem;
         background-image: url("/assets/images/alpd-academy/manilla-folder-mobile.png");
         background-size: 100% 100%;
         background-repeat: no-repeat;
@@ -130,6 +172,8 @@
             max-width: 90rem;
             margin-left: auto;
             margin-right: auto;
+
+            padding-top: 5rem;
         }
 
         figcaption,
@@ -150,9 +194,12 @@
         .alpd-academy__alkaline-wrapper {
             position: relative;
             z-index: 2;
-            background-image: url("/assets/images/alpd-academy/content-background.png");
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
+            background-color: $color-white;
+
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+            padding-top: 3rem;
+            padding-bottom: 2rem;
 
             @media screen and (min-width: 1024px) {
                 max-width: 56.25rem;
@@ -160,6 +207,7 @@
                 margin-right: auto;
 
                 padding: 1rem;
+                padding-top: 0;
 
                 background-color: #fafafa;
 
@@ -170,7 +218,7 @@
 
             @media screen and (min-width: 1366px) {
                 max-width: 68.5rem;
-                padding: 2.8937rem 0;
+                padding-bottom: 2.8937rem;
                 transform: translate(5.5rem, .625rem);
             }
         }
@@ -513,9 +561,6 @@
                 line-height: 25.2px;
 
                 font-weight: 400;
-
-                &::before {
-                }
             }
         }
 
@@ -807,6 +852,17 @@
             .number__kpi-description {
                 color: $color-white;
             }
+
+            @media screen and (min-width: 1366px) {
+                
+                &:first-of-type {
+                    margin-right: 0;
+                }
+
+                &:last-of-type {
+                    margin-left: 0;
+                }
+            }
         }
     }
 
@@ -964,9 +1020,15 @@
         display: flex;
         align-items: center;
 
+        .wrapper {
+            @media screen and (min-width: 500px) {
+                max-width: max-content;
+            }
+        }
+
         @media screen and (min-width: 500px) {
             padding: 0;
-            max-width: 44.6875rem;
+            max-width: 45.6875rem;
             margin-left: auto;
             margin-right: auto;
         }
@@ -983,6 +1045,8 @@
 
                 @media screen and (min-width: 500px) {
                     margin-bottom: 3rem;
+
+                    font-family: Barlow, Arial, Helvetica, sans-serif;
                 }
             }
         }
@@ -1061,46 +1125,6 @@
         &.third {
             bottom: 0;
             transform: translateX(-50%) rotate(-5deg);
-        }
-    }
-}
-
-.page-hero {
-    position: relative;
-    height: calc(250px + ((384 - 250) * ((100vw - 320px) / (1440 - 320))));
-
-    .page-hero__image {
-        height: 100%;
-
-        img {
-            height: 100%;
-        }
-    }
-
-    .page-hero__stamp {
-        position: absolute;
-        width: 15.0625rem;
-        top: 50%;
-        transform: translateY(-50%);
-
-        @media screen and (min-width: 768px) {
-            width: 22.0625rem;
-            left: 3rem;
-        }
-    }
-
-    .page-hero-red-string {
-        width: calc(100vw + 20rem);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        z-index: 2;
-
-        transform: translate(-50%, -50%) rotate(40deg);
-
-        @media screen and (min-width: 768px) {
-            top: 93%;
-            transform: translate(-50%, -50%) rotate(7deg);
         }
     }
 }
