--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import CTA from "../components/CTA.astro";
-import TabsPanel from "../components/usual-suspects/TabsPanel.astro"
 import MobileSelector from "../components/usual-suspects/MobileSelector.astro";
 
 
@@ -32,6 +31,17 @@ import MobileSelector from "../components/usual-suspects/MobileSelector.astro";
 
   <section class="usual-suspects-tabs--mobile" >
     <MobileSelector />
+  </section>
+
+  <section class="usual-suspects-misdiagnosis" >
+
+    <hr class="horizontal_line" >
+    <hr class="horizontal_line--secondary" >
+
+    <h2 class="title" >A misdiagnosis can do damage</h2>
+    <p class="pharagraph" >Misdiagnosis of a patient with hypophosphatasia is common and can lead to ineffective management that can compound the clinical picture and worsen hypophosphatasia. Certain therapies used for other disorders can interfere with or dramatically worsen hypophosphatasia.4-6, 15-17</p>
+    <p class="pharagraph--secondary" >Make sure to rule out hypophosphatasia before starting patients on bisphosphonates or some commonly used supplements that may end up causing your patients harm4,5,7</p>
+  
   </section>
 
   
